add_subdirectory(CAPI)
add_subdirectory(Catalyst)
add_subdirectory(Driver)
add_subdirectory(Gradient)
add_subdirectory(hlo-extensions)
add_subdirectory(Ion)
add_subdirectory(MBQC)
add_subdirectory(Mitigation)
add_subdirectory(PauliFrame)
add_subdirectory(QEC)
add_subdirectory(QRef)
add_subdirectory(Quantum)
add_subdirectory(RTIO)
add_subdirectory(Test)
